--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "./dist/Server/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "start": "nodemon .",
+    "build": "etsc",
+    "start": "node .",
     "start-dev": "nodemon --exec npx ts-node ./src/Server/app.ts"
   },
   "keywords": [],
@@ -18,6 +18,8 @@
     "@types/node": "^17.0.23",
     "body-parser": "^1.19.2",
     "cookie-parser": "^1.4.6",
+    "esbuild": "^0.14.36",
+    "esbuild-node-tsc": "^1.8.5",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
     "jsonwebtoken": "^8.5.1",
